--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,12 @@ license = "AGPL-3.0-only"
 edition = "2018"
 
 [dependencies]
-bincode = "1.3.3"
-serde = "1.0.130"
+borsh = "0.9.1"
 solana-program = "1.7.11"
 spl-associated-token-account = "1.0.3"
 spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
+
+anchor-lang = { version = "0.17.0", optional = true }
 
 #[dev-dependencies]
 #solana-program-test = "1.7.14"
@@ -23,3 +24,7 @@ spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
+[features]
+no-anchor-support = []
+anchor-support = ["anchor-lang"]
