--- a/test-sdk/Cargo.toml
+++ b/test-sdk/Cargo.toml
@@ -5,7 +5,7 @@ description = "Solana Program Library Governance Program Test SDK"
 authors = ["Solana Maintainers <maintainers@solana.foundation>"]
 repository = "https://github.com/solana-labs/solana-program-library"
 license = "Apache-2.0"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 arrayref = "0.3.6"
@@ -15,9 +15,9 @@ num-derive = "0.3"
 num-traits = "0.2"
 serde = "1.0.127"
 serde_derive = "1.0.103"
-solana-program = "1.8.2"
-solana-program-test = "1.8.2"
-solana-sdk = "1.8.2"
+solana-program = "1.9.0"
+#solana-program-test = "1.8.10"
+solana-sdk = "1.9.0"
 spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
 spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 thiserror = "1.0"
