--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ authors = [
 repository = "https://github.com/streamflow-finance/timelock-crate"
 readme = "README.md"
 license = "AGPL-3.0-only"
-edition = "2021"
+edition = "2018"
 exclude = [
     "misc/*",
     ".github/*"
@@ -20,18 +20,20 @@ exclude = [
 
 [dependencies]
 borsh = "0.9.1"
-solana-program = "1.9.0"
+num-traits = "0.2.14"
+solana-program = "1.8.10"
 spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
 thiserror = "1.0.30"
 
 [dependencies.partner-oracle]
 git = "ssh://git@github.com/streamflow-finance/partner-oracle.git"
+features = ["no-entrypoint"]
 
 [dev-dependencies]
-#solana-program-test = "1.8.10"
-solana-client = "1.9.0"
-solana-sdk = "1.9.0"
+solana-program-test = "1.8.10"
+solana-client = "1.8.10"
+solana-sdk = "1.8.10"
 anyhow = "1.0.44"
 test-sdk = { path = "./test-sdk" }
 
