--- a/.github/workflows/rust-tests.yml
+++ b/.github/workflows/rust-tests.yml
@@ -10,13 +10,16 @@ jobs:
               with:
                 ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
             - uses: actions/checkout@v2
+            - name: Install system libs
+              run: |
+                sudo apt update
+                sudo apt install libudev-dev
             - name: Install Rust
               uses: actions-rs/toolchain@v1
               with:
                 toolchain: stable
                 override: true
                 components: rustfmt, clippy
-
             - name: Install Solana CLI
               run: |
                 sh -c "$(curl -sSfL https://release.solana.com/beta/install)"
