--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ num-traits = "0.2.14"
 solana-program = "1.8.11"
 spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
+spl-math = {version = "0.1.0", features = ["no-entrypoint"]}
 thiserror = "1.0.30"
 
 [dependencies.partner-oracle]
